--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -2,36 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "30a3799e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import feature_extraction\n",
-    "import data_utils\n",
     "import mat73\n",
     "import argparse\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau, pearsonr, spearmanr\n",
-    "from biomarkers import BioMarkers, EEG, EMG, EOG\n",
-    "from importlib import reload\n",
-    "reload(feature_extraction)\n",
-    "from feature_extraction import concatenate_features, get_frequency_idx, get_spectral_power, get_feature_by_name, Feature, EEG_BANDS\n",
     "\n",
+    "# from importlib import reload\n",
+    "# import feature_extraction\n",
+    "# reload(feature_extraction)\n",
+    "\n",
+    "from biomarkers import BioMarkers, EEG, EMG, EOG, ALL_MARKERS\n",
+    "from feature_extraction import concatenate_features, get_frequency_idx, get_spectral_power, get_feature_by_name, Feature, EEG_BANDS, FEATURE_TO_FUNC\n",
     "from data_utils import load_data_from_dir, get_features_in_all_blocks, get_behavior_labels\n",
     "\n",
     "# Train machine learning models\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.pipeline import Pipeline\n",
-    "\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.model_selection import GroupKFold,GridSearchCV,cross_val_score,cross_validate\n",
-    "# from biosppy.signals import eeg\n",
-    "# from biosppy import plotting\n",
     "\n",
-    "# reload(data_utils)"
+    "# from biosppy.signals import eeg\n",
+    "# from biosppy import plotting"
    ]
   },
   {
@@ -75,6 +73,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fe698148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_all_block(all_data: dict) -> dict:\n",
+    "    marker_to_all_block = {}\n",
+    "    for block_name, markers in all_data.items():\n",
+    "        marker_to_data = markers.get_all_data()\n",
+    "        for marker, data in marker_to_data.items():\n",
+    "            if marker not in marker_to_all_block:\n",
+    "                marker_to_all_block[marker] = data\n",
+    "            else:\n",
+    "                marker_to_all_block[marker] = np.concatenate((marker_to_all_block[marker], data), axis=-1)\n",
+    "\n",
+    "    return marker_to_all_block\n",
+    "\n",
+    "marker_to_block = transform_all_block(all_data)\n",
+    "print(len(marker_to_block))\n",
+    "for marker, block in marker_to_block.items():\n",
+    "    print(f'{marker} {block.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "03c1be00",
    "metadata": {},
@@ -97,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "id": "dd3a85fc",
    "metadata": {},
    "outputs": [
@@ -105,86 +128,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BP channel 0 Feature.MEAN pearson correlation -0.33474792426552086\n",
-      "BP channel 0 Feature.STD pearson correlation -0.18958271403063012\n",
-      "BP channel 0 Feature.PTP pearson correlation -0.0679916953197811\n",
-      "BP channel 0 Feature.VAR pearson correlation -0.18222601294849952\n",
-      "BP channel 0 Feature.MINIM pearson correlation -0.27663217145944474\n",
-      "BP channel 0 Feature.MAXIM pearson correlation -0.37192429186496073\n",
-      "BP channel 0 Feature.MEAN_SQUARE pearson correlation -0.33970968924342637\n",
-      "BP channel 0 Feature.RMS pearson correlation -0.3449114264688428\n",
-      "BP channel 0 Feature.ABS_DIFF pearson correlation -0.08926240358780545\n",
-      "BP channel 0 Feature.SKEWNESS pearson correlation -0.15759077074161024\n",
-      "BP channel 0 Feature.KURTOSIS pearson correlation 0.13132761875948257\n"
+      "Feature.DELTA\n",
+      "128 128\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Length of values (11) does not match length of index (128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [44]\u001b[0m, in \u001b[0;36m<cell line: 75>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ser_list\n\u001b[1;32m     72\u001b[0m \u001b[38;5;66;03m# ser_list = get_pearson_correlation_series(marker_to_block, {'BP', 'ECG', 'EGG', 'GSR', 'Resp', 'TREV'}, attention_label)\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;66;03m# ser_list = ser_list + get_pearson_correlation_series(marker_to_block, {'EMG', 'EOG'}, attention_label, 2)\u001b[39;00m\n\u001b[0;32m---> 75\u001b[0m ser_list \u001b[38;5;241m=\u001b[39m \u001b[43mget_eeg_pearson_correlation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmarker_to_block\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEEG\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattention_label\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;66;03m#define number of rows and columns for subplots\u001b[39;00m\n\u001b[1;32m     78\u001b[0m nrow\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "Input \u001b[0;32mIn [44]\u001b[0m, in \u001b[0;36mget_eeg_pearson_correlation\u001b[0;34m(all_block, labels)\u001b[0m\n\u001b[1;32m     51\u001b[0m         pearson_corr\u001b[38;5;241m.\u001b[39mappend(corr[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(pearson_corr), \u001b[38;5;28mlen\u001b[39m(index))\n\u001b[0;32m---> 54\u001b[0m     ser \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSeries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpeaerson_corr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     55\u001b[0m     ser_list\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmarker_name\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEEG \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m:ser\u001b[38;5;241m.\u001b[39mnlargest(\u001b[38;5;241m10\u001b[39m)})\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ser_list\n",
+      "File \u001b[0;32m~/miniconda3/envs/MM/lib/python3.8/site-packages/pandas/core/series.py:442\u001b[0m, in \u001b[0;36mSeries.__init__\u001b[0;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[1;32m    440\u001b[0m     index \u001b[38;5;241m=\u001b[39m default_index(\u001b[38;5;28mlen\u001b[39m(data))\n\u001b[1;32m    441\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_list_like(data):\n\u001b[0;32m--> 442\u001b[0m     \u001b[43mcom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrequire_length_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    444\u001b[0m \u001b[38;5;66;03m# create/copy the manager\u001b[39;00m\n\u001b[1;32m    445\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, (SingleBlockManager, SingleArrayManager)):\n",
+      "File \u001b[0;32m~/miniconda3/envs/MM/lib/python3.8/site-packages/pandas/core/common.py:557\u001b[0m, in \u001b[0;36mrequire_length_match\u001b[0;34m(data, index)\u001b[0m\n\u001b[1;32m    553\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    554\u001b[0m \u001b[38;5;124;03mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[1;32m    555\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    556\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(index):\n\u001b[0;32m--> 557\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    558\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLength of values \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    559\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    560\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdoes not match length of index \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    561\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(index)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    562\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Length of values (11) does not match length of index (128)"
      ]
     }
    ],
    "source": [
-    "\n",
     "def testget_feature_by_name(\n",
-    "    all_blocks: dict, marker_name: str, feature_name: Feature, channel: int = 0\n",
+    "    all_blocks: dict, feature_name: Feature, channel: int = 0,\n",
     "):\n",
+    "    all_epoch_data = np.swapaxes(\n",
+    "        all_blocks, 0, -1\n",
+    "    )  # (num_channels, num_data_points, num_epochs) => (num_epochs, num_data_points, num_channels)\n",
+    "\n",
     "    all_blocks_features = []\n",
-    "    for block_name, markers in all_blocks.items():\n",
-    "        marker_to_data = markers.get_all_data()\n",
-    "        all_epoch_data = marker_to_data[marker_name]\n",
-    "        all_epoch_data = np.swapaxes(\n",
-    "            all_epoch_data, 0, -1\n",
-    "        )  # (num_channels, num_data_points, num_epochs) => (num_epochs, num_data_points, num_channels)\n",
+    "    for data in all_epoch_data:\n",
+    "        val = 0\n",
+    "        if data.ndim > 1:\n",
+    "            data = data[:, channel]\n",
     "\n",
-    "        for data in all_epoch_data:\n",
-    "            val = 0\n",
-    "            if data.ndim > 1:\n",
-    "                data = data[:, channel]\n",
-    "                \n",
-    "            if marker_name == \"EEG\":\n",
-    "                eeg_band_fft = get_spectral_power(data, 512)\n",
-    "                val = eeg_band_fft[feature_name]\n",
-    "            else:\n",
-    "                if feature_name == Feature.MEAN:\n",
-    "                    val = mean(data)\n",
+    "        if feature_name in EEG_BANDS.keys():\n",
+    "            eeg_band_fft = get_spectral_power(data, 512)\n",
+    "            val = eeg_band_fft[feature_name]\n",
+    "        else:\n",
+    "            func = FEATURE_TO_FUNC[feature_name]\n",
+    "            val = func(data)\n",
     "\n",
-    "            all_blocks_features.append(val)\n",
+    "        all_blocks_features.append(val)\n",
     "\n",
     "    return all_blocks_features\n",
     "\n",
-    "def calculatePearson(all_data: dict, labels: list, marker_name: str, feature_name: Feature, num_channels: int = 1):\n",
+    "\n",
+    "def calculate_pearson_stats_features(all_data: dict, labels: list, marker_name: str, channel: int = 0):\n",
     "    pearson_corr = []\n",
-    "    index = []\n",
-    "    for ch in range(num_channels):\n",
-    "        spf = get_feature_by_name(all_blocks=all_data, marker_name=marker_name, feature_name=feature_name, channel=ch)\n",
-    "        corr = pearsonr(spf, labels)\n",
-    "        spearmanr_corr = spearmanr(spf, labels)\n",
+    "    features = []\n",
+    "    for f in (Feature):\n",
+    "        if f in EEG_BANDS.keys():\n",
+    "            continue\n",
     "        \n",
-    "        print(f\"{marker_name} channel {ch} {feature_name} pearson correlation {corr[0]}\")\n",
-    "        #print(f\"{marker_name} channel {ch} {feature_name} spearmanr correlation {spearmanr_corr[0]}\")\n",
+    "        spf = testget_feature_by_name(all_blocks=all_data, feature_name=f, channel=channel)   \n",
+    "        corr = pearsonr(spf, labels)\n",
+    "        #print(f\"{marker_name} channel {channel} {feature_name} pearson correlation {corr[0]}\")\n",
     "        pearson_corr.append(corr[0])\n",
-    "        index.append(ch)\n",
+    "        features.append(f.name)\n",
     "\n",
-    "    plot_corr = pd.Series(pearson_corr, index=index)\n",
-    "    return plot_corr.nlargest(5)\n",
+    "    return pearson_corr, features\n",
     "\n",
+    "def get_eeg_pearson_correlation(all_block: dict, labels: list):\n",
+    "    ser_list = []\n",
+    "    num_channel = 128\n",
+    "    index = list(range(1, num_channel+1, 1))\n",
+    "    for f in list(EEG_BANDS.keys()):\n",
+    "        pearson_corr = []\n",
+    "        print(f)\n",
+    "        for ch in range(num_channel):\n",
+    "            spf = testget_feature_by_name(all_blocks=all_block, feature_name=f, channel=ch)   \n",
+    "            corr = pearsonr(spf, labels)\n",
+    "            pearson_corr.append(corr[0])\n",
+    "        print(len(pearson_corr), len(index))\n",
     "\n",
-    "# fig=plt.figure()\n",
-    "# df1 = calculatePearson(all_data, valence_label, 'EEG', Feature.THETA, 5)\n",
-    "# df2 = calculatePearson(all_data, valence_label, 'EEG', Feature.ALPHA, 5)\n",
-    "for f in (Feature):\n",
-    "    if f in EEG_BANDS.keys():\n",
-    "        continue\n",
-    "    calculatePearson(all_data, arousal_label, 'BP', f, 1)\n",
+    "        ser = pd.Series(data=peaerson_corr, index=index)\n",
+    "        ser_list.append({'marker_name': f'EEG {f.name}', 'value':ser.nlargest(10)})\n",
+    "    \n",
+    "    return ser_list\n",
+    "\n",
+    "def get_pearson_correlation_series(marker_to_block: dict, markers: list, labels: list, num_channel: int=1):\n",
+    "    ser_list = []\n",
+    "    for marker_name in markers:\n",
+    "        data = marker_to_block[marker_name]\n",
+    "        for ch in range(num_channel):\n",
+    "            peaerson_corr, features = calculate_pearson_stats_features(data, labels, ch)\n",
+    "            ser = pd.Series(data=peaerson_corr, index=features)\n",
+    "\n",
+    "            name = marker_name if num_channel == 1 else f'{marker_name}:{ch}'\n",
+    "            ser_list.append({'marker_name': name, 'value':ser})\n",
+    "\n",
+    "    return ser_list\n",
+    "\n",
+    "# ser_list = get_pearson_correlation_series(marker_to_block, {'BP', 'ECG', 'EGG', 'GSR', 'Resp', 'TREV'}, attention_label)\n",
+    "# ser_list = ser_list + get_pearson_correlation_series(marker_to_block, {'EMG', 'EOG'}, attention_label, 2)\n",
+    "\n",
+    "ser_list = get_eeg_pearson_correlation(marker_to_block['EEG'], attention_label)\n",
+    "\n",
     "#define number of rows and columns for subplots\n",
-    "# nrow=3\n",
-    "# ncol=1\n",
-    "# # make a list of all dataframes \n",
-    "# df_list = [{'title':'Theta', 'value':df1} ,{'title':'Alpha', 'value': df2} ,{'title':'Mean', 'value': df3}]\n",
-    "# fig, axes = plt.subplots(nrow, ncol)\n",
-    "\n",
-    "# # plot counter\n",
-    "# count=0\n",
-    "# for r in range(nrow):\n",
-    "#     title = df_list[count]['title']\n",
-    "#     df_list[count]['value'].plot(ax=axes[r], kind='barh',title = f'{title} Pearson Correlation')\n",
-    "#     count+=1"
+    "nrow=2\n",
+    "ncol=2\n",
+    "# make a list of all dataframes \n",
+    "fig, axes = plt.subplots(nrow, ncol)\n",
+    "fig.subplots_adjust(hspace=0.5, wspace=0.5)\n",
+    "fig.set_size_inches(15, 15) \n",
+    "# plot counter\n",
+    "count=0\n",
+    "for r in range(nrow):\n",
+    "    for c in range(ncol):\n",
+    "        marker_name = ser_list[count]['marker_name']\n",
+    "        ser_list[count]['value'].plot(ax=axes[r][c], kind='barh', title=f'{marker_name} Pearson Correlation')\n",
+    "        count+=1"
    ]
   },
   {
