add features helper

--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -21,10 +21,11 @@
     "    plot_series,\n",
     "    plot_eeg_topomap_one_block,\n",
     "    plot_eeg_topomap_all_blocks,\n",
-    "    plot_top_chaneels_by_p_value,\n",
+    "    plot_k_chaneels_by_r_value,\n",
     "    plot_eeg_pearson_correlation_table,\n",
     "    get_eeg_pearson_correlation_series_all_blocks,\n",
     "    plot_time_series_by_epoch,\n",
+    "    plot_pearson_correlation_table_by_channel,\n",
     ")\n",
     "from biomarkers import (\n",
     "    EEG,\n",
@@ -42,6 +43,8 @@
     "    Feature,\n",
     "    EEG_BANDS,\n",
     "    FEATURE_TO_FUNC,\n",
+    "    get_all_behaviors_features_by_markers,\n",
+    "    get_all_behaviors_labels,\n",
     ")\n",
     "from data_utils import (\n",
     "    load_data_from_dir,\n",
@@ -49,7 +52,8 @@
     ")\n",
     "from calculate_correlation import (\n",
     "    STAT_FEATURES,\n",
-    "    get_all_conditions_feature_to_pc_by_markers,\n",
+    "    get_all_behaviors_feature_to_pc_by_markers,\n",
+    "    get_all_trials_average_rp_values,\n",
     ")\n",
     "\n",
     "# Train machine learning models\n",
@@ -86,31 +90,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calculate_correlation import get_feature_to_pearson_correlation\n",
-    "\n",
+    "num_channels = 2\n",
     "num_blocks = 0\n",
-    "num_channels = EEG_NUM_CHANNELS\n",
     "\n",
-    "dir_name_to_cf = {}\n",
+    "dir_name_to_features = {}\n",
+    "dir_name_to_labels = {}\n",
+    "features = STAT_FEATURES\n",
+    "marker = EMG.__name__\n",
+    "channel_num = 0\n",
     "for dir_name, all_data in dir_to_data.items():\n",
-    "    ctf = get_all_conditions_feature_to_pc_by_markers(\n",
-    "        all_data, EEG.__name__, EEG_BANDS.keys(), num_channels, num_blocks\n",
+    "    # ctf = get_all_behaviors_feature_to_pc_by_markers(\n",
+    "    #     all_data, marker, features, num_channels, num_blocks\n",
+    "    # )\n",
+    "\n",
+    "    dir_name_to_features[dir_name] = get_all_behaviors_features_by_markers(\n",
+    "        all_data, marker, features, channel_num\n",
     "    )\n",
-    "    dir_name_to_cf[dir_name] = ctf\n",
+    "    dir_name_to_labels[dir_name] = get_all_behaviors_labels(all_data)\n",
     "\n",
-    "    if len(condition_to_features) == 0:\n",
-    "        condition_to_features = ctf\n",
-    "        continue\n",
-    "\n",
-    "    for condition, feature_to_pc in condition_to_features.items():\n",
-    "        for f, pc in feature_to_pc.items():\n",
-    "            condition_to_features[condition][f] = pc + ctf[condition][f]\n",
-    "\n",
-    "avg_condition_to_features = defaultdict()\n",
-    "for condition, feature_to_pc in condition_to_features.items():\n",
-    "    avg_condition_to_features[condition] = {}\n",
-    "    for f, pc in feature_to_pc.items():\n",
-    "        avg_condition_to_features[condition][f] = pc / len(dir_to_data)"
+    "# avg_condition_to_features = get_all_trials_average_rp_values(dir_name_to_cf, features)"
    ]
   },
   {
@@ -121,37 +119,38 @@
    "outputs": [],
    "source": [
     "all_data = dir_to_data[\"../2000_CleanData\"]\n",
-    "channel_names = all_data[\"audio_hvla\"].get_chanlocs(\"EEG\")\n",
+    "channel_names = all_data[\"audio_hvla\"].get_chanlocs(marker)\n",
     "\n",
     "\"\"\" plot the time series given the marker and block\n",
-    "\"\"\"  \n",
+    "\"\"\"\n",
     "# plot_time_series_by_epoch(all_data['audio_hvla'], 'EMG', 'audio_hvla', 0)\n",
     "\n",
     "\n",
     "\"\"\" plot the single channel correlation table\n",
-    "\"\"\"  \n",
-    "# channel = 110\n",
+    "\"\"\"\n",
+    "# channel = 1\n",
     "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     label = f\"{channel_names[channel]} {condition}\"  \n",
+    "#     label = f\"{channel_names[channel]} {condition}\"\n",
     "#     plot_pearson_correlation_table_by_channel(\n",
-    "#         label, feature_to_pc, [\"R-Value\", \"P-Value\"], EEG_BANDS.keys(), 110, True\n",
+    "#         label, feature_to_pc, [\"R-Value\", \"P-Value\"], features, channel, True\n",
     "#     )\n",
     "\n",
-    "\"\"\" plot the top channel correlation table given p values\n",
-    "\"\"\"    \n",
+    "\"\"\" plot the top channel correlation table given r values\n",
+    "\"\"\"\n",
     "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     plot_top_chaneels_by_p_value(feature_to_pc, list(EEG_BANDS.keys()), channel_names, condition, 20)\n",
-    "# \n",
+    "#     plot_k_chaneels_by_r_value(feature_to_pc, channel_names, features, condition, True, 2)\n",
+    "#     plot_k_chaneels_by_r_value(feature_to_pc, channel_names, features, condition, False, 2)\n",
+    "\n",
     "\n",
     "\"\"\" plot the top channel correlation table with different blocks\n",
-    "\"\"\"  \n",
+    "\"\"\"\n",
     "# all_block_names = list(all_data.keys())\n",
     "# all_block_names.sort()\n",
     "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
     "#     plot_eeg_pearson_correlation_table(condition, feature_to_pc, all_block_names, 1)\n",
     "\n",
     "\"\"\" plot the series for the top k channels\n",
-    "\"\"\"  \n",
+    "\"\"\"\n",
     "# define number of rows and columns for subplots\n",
     "# nrow = 3\n",
     "# ncol = 2\n",
