add get features

--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -179,6 +179,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "010d750e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_name_to_features = {}\n",
+    "dir_name_to_labels = {}\n",
+    "features = STAT_FEATURES\n",
+    "marker = BP.__name__\n",
+    "channel_num = 1\n",
+    "for dir_name, all_data in dir_to_data.items():\n",
+    "    feature_to_value = get_all_features_by_marker(\n",
+    "        all_data, marker, features, channel_num\n",
+    "    )\n",
+    "\n",
+    "    dir_name_to_features[dir_name] = feature_to_value\n",
+    "    dir_name_to_labels[dir_name] = get_all_behaviors_labels(all_data)\n",
+    "\n",
+    "features_to_trials = defaultdict()\n",
+    "for dir_name, fv in dir_name_to_features.items():\n",
+    "    for f, v in fv.items():\n",
+    "        if f not in features_to_trials:\n",
+    "            features_to_trials[f] = defaultdict()\n",
+    "        if dir_name not in features_to_trials[f]:\n",
+    "            features_to_trials[f][dir_name] = defaultdict()\n",
+    "\n",
+    "        features_to_trials[f][dir_name] = v\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c1cfc36b",
    "metadata": {},
    "outputs": [],
