--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -25,7 +25,7 @@
     "    plot_eeg_pearson_correlation_table,\n",
     "    get_eeg_pearson_correlation_series_all_blocks,\n",
     "    plot_time_series_by_epoch,\n",
-    "    plot_pearson_correlation_table_by_channel,\n",
+    "    plot_scatter_by_marker,\n",
     ")\n",
     "from biomarkers import (\n",
     "    EEG,\n",
@@ -45,6 +45,8 @@
     "    load_data_from_dir,\n",
     "    get_all_behaviors_labels,\n",
     "    get_all_features_by_marker,\n",
+    "    extract_labels,\n",
+    "    extract_features_by_channel,\n",
     ")\n",
     "from calculate_correlation import (\n",
     "    STAT_FEATURES,\n",
@@ -86,17 +88,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_channels = 4\n",
-    "num_blocks = 0\n",
-    "\n",
-    "dir_name_to_ctf = {}\n",
     "features = STAT_FEATURES\n",
     "marker = ECG.__name__\n",
     "\n",
-    "for dir_name, all_data in dir_to_data.items():\n",
-    "    dir_name_to_ctf[dir_name] = get_all_behaviors_feature_to_pc_by_markers(\n",
-    "        all_data, marker, features, num_channels, num_blocks\n",
-    "    )"
+    "\"\"\" extract features from physiological signals\n",
+    "\"\"\"\n",
+    "dir_name_to_features = extract_features_by_channel(marker, dir_to_data, features, 0)\n",
+    "dir_name_to_labels = extract_labels(dir_to_data)"
    ]
   },
   {
@@ -106,6 +104,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" extract correlation from physiological signals\n",
+    "\"\"\"\n",
+    "num_channels = 4\n",
+    "num_blocks = 0\n",
+    "dir_name_to_ctf = {}\n",
+    "for dir_name, all_data in dir_to_data.items():\n",
+    "    dir_name_to_ctf[dir_name] = get_all_behaviors_feature_to_pc_by_markers(\n",
+    "        all_data, marker, features, num_channels, num_blocks\n",
+    "    )\n",
+    "    \n",
     "avg_condition_to_features = get_all_trials_average_rp_values(\n",
     "    dir_name_to_ctf, features, \"pearson\"\n",
     ")\n",
@@ -123,12 +131,7 @@
    "outputs": [],
    "source": [
     "all_data = dir_to_data[\"../2000_CleanData\"]\n",
-    "channel_names = [\n",
-    "    \"HF\",\n",
-    "    \"LF\",\n",
-    "    \"LFHFratio\",\n",
-    "    \"avgHR\",\n",
-    "]  # all_data[\"audio_hvla\"].get_chanlocs(marker)\n",
+    "channel_names = all_data[\"audio_hvla\"].get_chanlocs(marker)\n",
     "\n",
     "\"\"\" plot the time series given the marker and block\n",
     "\"\"\"\n",
@@ -183,10 +186,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" extract features from physiological signals\n",
+    "\"\"\"\n",
     "dir_name_to_features = {}\n",
     "dir_name_to_labels = {}\n",
-    "features = STAT_FEATURES\n",
-    "marker = BP.__name__\n",
     "channel_num = 1\n",
     "for dir_name, all_data in dir_to_data.items():\n",
     "    feature_to_value = get_all_features_by_marker(\n",
@@ -214,32 +217,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors = [\"b\", \"c\", \"y\", \"m\", \"r\"]\n",
-    "for b in [\"valence\", \"arousal\", \"attention\"]:\n",
-    "    fig, axes = plt.subplots(nrows=2, ncols=5, figsize=(20, 7))\n",
-    "    fig.suptitle(\n",
-    "        f\"{marker} {channel_to_fn[channel_num]} features vs {b}\", fontsize=14, y=1\n",
-    "    )\n",
-    "\n",
-    "    fidx = 0\n",
-    "    r, c = 0, 0\n",
-    "    for f, trials in features_to_trials.items():\n",
-    "        cidx = 0\n",
-    "        r = int(fidx % 2)\n",
-    "        c = int(fidx / 2)\n",
-    "        for trial, val in trials.items():\n",
-    "            trial_name = trial.strip(\"../_CleanData\")\n",
-    "            labels = dir_name_to_labels[trial][b]\n",
-    "            axes[r][c].scatter(\n",
-    "                val, labels, c=colors[cidx], label=trial_name, alpha=0.3\n",
-    "            )  # norm=mpl.colors.Normalize(vmin=0, vmax=2)\n",
-    "            axes[r][c].set_xlabel(f.name, fontsize=10)\n",
-    "            cidx += 1\n",
-    "\n",
-    "        axes[r][c].legend()\n",
-    "        fidx += 1\n",
-    "\n",
-    "    plt.show()"
+    "\"\"\" plot the scattor for physiological signals\n",
+    "\"\"\"\n",
+    "# plot_scatter_by_marker(marker, features_to_trials, dir_name_to_labels, channel_names[channel_num])"
    ]
   },
   {
