Add summary shap plot

--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f557af",
+   "id": "d1322717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +95,16 @@
     "all_label_array = extract_labels(dir_to_data, all_dir=ALL_DIRS)\n",
     "label_list = get_categorical_labels(all_label_array, valence_threshold=0.65)\n",
     "groups_list = [[i] for i, j in enumerate(label_list)]\n",
-    "group_array = np.hstack(groups_list)\n",
-    "\n",
-    "\n",
+    "group_array = np.hstack(groups_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f557af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
     "  extract features from physiological signals\n",
     "\"\"\"\n",
@@ -112,9 +119,6 @@
     "    print(f\"extracted {m} stats or PSD features\")\n",
     "    all_feature_array.append(f_array)\n",
     "    feature_names.extend(names)\n",
-    "    print(names)\n",
-    "    print(f_array)\n",
-    "    break\n",
     "\n",
     "all_feature_array = np.concatenate(all_feature_array, axis=-1)\n",
     "\n",
@@ -141,7 +145,7 @@
     "\n",
     "df[\"Subject\"] = subjects\n",
     "\n",
-    "df.to_csv(\"2005_2006_2007_subjects_eeg_ecg_emg.csv\")"
+    "df.to_csv(\"2005_2006_2007_subjects_eeg_ecg_emg.csv\", index=False)"
    ]
   },
   {
@@ -151,27 +155,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check correlation.\n",
-    "# df = pd.read_csv('three_subjects_eeg_ecg_emg.csv')\n",
-    "corr = df.corr()\n",
-    "sorted_corr = corr.sort_index().sort_index(axis=1)\n",
-    "truncated_corr = sorted_corr.truncate(\n",
-    "    before=\"D7_ALPHA\", after=\"VEOG_VAR\", axis=\"rows\"\n",
-    ").truncate(before=\"D7_ALPHA\", after=\"VEOG_VAR\", axis=\"columns\")\n",
-    "truncated_corr\n",
-    "# sorted(df.columns)"
+    "\"\"\"\n",
+    "    load features from csv\n",
+    "\"\"\"\n",
+    "\n",
+    "frames = []\n",
+    "for fn in [\"2005_2006_2007_subjects_eeg_ecg_emg.csv\"]:\n",
+    "    df = pd.read_csv(fn)\n",
+    "    if fn == \"three_subjects_eeg_ecg_emg\":\n",
+    "        # get rid of 1004\n",
+    "        mask = df[\"Subject\"].isin([\"../2000_CleanData\", \"2001_CleanData\"])\n",
+    "        df = df[mask]\n",
+    "    frames.append(df)\n",
+    "\n",
+    "result = pd.concat(frames)\n",
+    "feature_names = df.drop([\"Subject\", \"Unnamed: 0\"], axis=1).columns\n",
+    "all_feature_array = df.drop([\"Subject\", \"Unnamed: 0\"], axis=1)\n",
+    "print(all_feature_array.shape, len(feature_names), len(label_list))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ac2b93ad",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "# plt.figure(figsize=(14,12))\n",
+    "\"\"\"\n",
+    "    plot the correlation heatmap\n",
+    "\"\"\"\n",
+    "corr = result.corr()\n",
+    "sorted_corr = corr.sort_index().sort_index(axis=1)\n",
+    "truncated_corr = sorted_corr.truncate(\n",
+    "    before=\"D7_ALPHA\", after=\"VEOG_VAR\", axis=\"rows\"\n",
+    ").truncate(before=\"D7_ALPHA\", after=\"VEOG_VAR\", axis=\"columns\")\n",
+    "\n",
+    "plt.figure(figsize=(14, 12))\n",
     "sns.heatmap(truncated_corr, vmin=-1, vmax=1, annot=False, cmap=\"RdBu_r\")"
    ]
   },
@@ -184,50 +207,65 @@
    "source": [
     "from sklearn.model_selection import GroupKFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "import shap\n",
+    "\n",
+    "colors = [\"c\", \"y\", \"m\", \"r\"]\n",
+    "\n",
     "\n",
     "accuracy = []\n",
     "gkf = GroupKFold()\n",
     "label_array = np.array(label_list)\n",
+    "\n",
+    "# normalize\n",
+    "scaler = StandardScaler()\n",
+    "normalized_all_feature_array = pd.DataFrame(\n",
+    "    scaler.fit_transform(all_feature_array), columns=all_feature_array.columns\n",
+    ")\n",
+    "#     normalized_all_feature_array = scaler.fit_transform(\n",
+    "#         all_feature_array.reshape(-1, all_feature_array.shape[-1])\n",
+    "#     ).reshape(all_feature_array.shape)\n",
+    "\n",
     "for train_index, val_index in gkf.split(\n",
-    "    all_feature_array, label_array, groups=group_array\n",
+    "    normalized_all_feature_array, label_array, groups=group_array\n",
     "):\n",
     "    train_features, train_labels = (\n",
-    "        all_feature_array[train_index],\n",
+    "        normalized_all_feature_array.iloc[train_index],\n",
     "        label_array[train_index],\n",
     "    )\n",
-    "    val_features, val_labels = all_feature_array[val_index], label_array[val_index]\n",
+    "    val_features, val_labels = (\n",
+    "        normalized_all_feature_array.iloc[val_index],\n",
+    "        label_array[val_index],\n",
+    "    )\n",
     "\n",
-    "    scaler = StandardScaler()\n",
-    "    train_features = scaler.fit_transform(\n",
-    "        train_features.reshape(-1, train_features.shape[-1])\n",
-    "    ).reshape(train_features.shape)\n",
-    "    val_features = scaler.transform(\n",
-    "        val_features.reshape(-1, val_features.shape[-1])\n",
-    "    ).reshape(val_features.shape)\n",
-    "\n",
-    "    # X_train, X_test, y_train, y_test = train_test_split(all_feature_array, label_list, test_size=.2)\n",
     "    # create model instance\n",
-    "    xg = XGBClassifier(n_estimators=2)\n",
+    "    model = XGBClassifier(n_estimators=2)\n",
     "    # fit model\n",
-    "    xg.fit(train_features, train_labels)\n",
-    "    # make predictions\n",
-    "    # print(xg.predict(val_features))\n",
-    "\n",
+    "    model.fit(train_features, train_labels)\n",
     "    # Print accuracy.\n",
-    "    acc = xg.score(val_features, val_labels)\n",
+    "    acc = model.score(val_features, val_labels)\n",
     "    print(\"Accuracy: %.2f%%\" % (acc * 100.0))\n",
-    "    accuracy.append(acc)"
+    "    accuracy.append(acc)\n",
+    "\n",
+    "    # Summary plot\n",
+    "    shap_values = shap.TreeExplainer(model).shap_values(val_features)\n",
+    "    color_func = lambda i: colors[i % len(shap_values)]\n",
+    "    shap.summary_plot(\n",
+    "        shap_values,\n",
+    "        all_feature_array.columns,\n",
+    "        class_names=[\"nvla\", \"nvha\", \"hvla\", \"hvha\"],\n",
+    "        color=color_func,\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeda55bc",
+   "id": "26349f6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(accuracy)\n",
-    "print(np.mean(accuracy))\n"
+    "print(np.mean(accuracy))"
    ]
   },
   {
@@ -248,7 +286,7 @@
     "\n",
     "    data_list.append(all_epoch_data)\n",
     "\n",
-    "data_array = np.concatenate(data_list, axis=2)\n"
+    "data_array = np.concatenate(data_list, axis=2)"
    ]
   },
   {
@@ -518,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
