--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -62,7 +62,19 @@
    "outputs": [],
    "source": [
     "ALL_DIRS = [\n",
+    "    \"../2000_CleanData\",\n",
+    "    \"../2001_CleanData\",\n",
     "    \"../2002\",\n",
+    "    \"../2003\",\n",
+    "    \"../2004\",\n",
+    "    \"../2005\",\n",
+    "    \"../2006\",\n",
+    "    \"../2007\",\n",
+    "    \"../2009\",\n",
+    "    \"../2010\",\n",
+    "    \"../2011\",\n",
+    "    \"../2012\",\n",
+    "    \"../2013\",\n",
     "]  # \"../2000_CleanData\", \"../2001_CleanData\", \"../1004_CleanData\"  \"../2003\", \"../2004\", \"../2005\", \"../2006\"\n",
     "\n",
     "dir_to_data = {}\n",
@@ -415,7 +427,10 @@
     "    concatenate raw signal (x)\n",
     "\"\"\"\n",
     "data_list = []\n",
-    "for m in [EEG.__name__, EGG.__name__]:  # EOG.__name__, , EMG.__name__, EGG.__name__\n",
+    "block_names = list(dir_to_data[ALL_DIRS[0]].keys())\n",
+    "block_names.sort()\n",
+    "\n",
+    "for m in [EGG.__name__, EEG.__name__]:  # EOG.__name__, , EMG.__name__, EGG.__name__\n",
     "    all_participants_data, condition_to_labels = concatenate_all_data(dir_to_data, m)\n",
     "    all_epoch_data = np.swapaxes(\n",
     "        all_participants_data, 0, -1\n",
